change in index.html

--- a/MyGym/index.html
+++ b/MyGym/index.html
@@ -24,8 +24,7 @@
             <a href="#about">about</a>
             <a href="#features">features</a>
             <a href="#pricing">pricing</a>
-            <a href="#trainers">trainers</a>
-            <a href="#blogs">blogs</a>
+            <a href="#pricing">contact us</a>
         </nav>
 
     </header>
